<resources>
    <string name="app_name">CoinTracker</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_favorites">Favorite coins</string>
    <string name="menu_log_out">Logout</string>
    <string name="menu_favorite">Add to favorites</string>
    <string name="menu_set_interval">Set refresh interval</string>
    <string name="menu_refresh">Refresh</string>

    <string name="description">Description:</string>
    <string name="sample_description">"Bitcoin is the first successful internet money based on peer-to-peer technology; whereby no central bank or authority is involved in the transaction and production of the Bitcoin currency. It was created by an anonymous individual/group under the name, Satoshi Nakamoto. The source code is available publicly as an open source project, anybody can look at it and be part of the developmental process.\r\n\r\nBitcoin is changing the way we see money as we speak. The idea was to produce a means of exchange, independent of any central authority, that could be transferred electronically in a secure, verifiable and immutable way. It is a decentralized peer-to-peer internet currency making mobile payment easy, very low transaction fees, protects your identity, and it works anywhere all the time with no central authority and banks.\r\n\r\nBitcoin is designed to have only 21 million BTC ever created, thus making it a deflationary currency. Bitcoin uses the   href=\"https://www.coingecko.com/en?hashing_algorithm=SHA-256\">SHA-25610 minutes. Miners today are mining Bitcoin using ASIC chip dedicated to only mining Bitcoin, and the hash rate has shot up to peta hashes.\r\n\r\nBeing the first successful online cryptography currency, Bitcoin has inspired other alternative currencies such as   href=\"https://www.coingecko.com/en/coins/litecoin\">Litecoininrimecoin, and so on.\r\n\r\nThe cryptocurrency then took off with the innovation of the turing-complete smart contract by href=\"https://www.coingecko.com/en/coins/ethereum\">Ethereum which led to the development of other amazing projects such as href=\"https://www.coingecko.com/en/coins/eos\">EOS</string>
    <string name="symbol">Symbol:</string>
    <string name="id">ID:</string>
    <string name="hashing">Hashing:</string>
    <string name="price_change_percentage">Price Change Percentage in 24h:</string>
    <string name="interval">Price refresh interval:</string>
    <string name="current_price">Current Price:</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email address</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_login">Already Have an account? Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="don_t_have_an_account_signup">Don\'t Have an account? Signup</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="interval_in_seconds">Set an interval in seconds to refresh the price of the coin</string>
    <string name="reset">Reset</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="seconds">Seconds</string>
</resources>
