<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.pmirkelam.cointracker.auth.ui.SignUpViewModel" />
    </data>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ui.SignUpFragment">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/guideline_height" />

            <TextView
                android:id="@+id/text_view_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_full_name"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/standard_padding"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginEnd="@dimen/standard_padding"
                android:hint="@string/full_name"
                app:boxStrokeColor="@color/purple_700"
                app:layout_constraintTop_toBottomOf="@id/text_view_create_account">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="8dp"
                    android:text="@={viewModel.name}"
                    android:textColor="#000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/standard_padding"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginEnd="@dimen/standard_padding"
                android:hint="@string/email_address"
                app:boxStrokeColor="@color/purple_700"
                app:hintTextColor="?attr/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/input_layout_full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    android:textColor="#000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/standard_padding"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginEnd="@dimen/standard_padding"
                android:hint="@string/password"
                app:boxStrokeColor="@color/purple_700"
                app:hintTextColor="?attr/colorPrimary"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/input_layout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textColor="#000" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/standard_padding"
                android:layout_marginTop="@dimen/auth_button_margin"
                android:layout_marginEnd="@dimen/standard_padding"
                android:onClick="@{() -> viewModel.onSignUpButtonClicked()}"
                android:text="@string/sign_up"
                app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_go_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_padding"
                android:text="@string/already_have_an_account_login"
                android:onClick="@{() -> viewModel.onBackToLoginClicked()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_sign_up" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

</layout>